feat: impl get user task status func
