# internal/router/handler_user.go
@@ -16,7 +16,7 @@ type UserStatusResponse struct {
 	TaskDescription string    `json:"taskDescription" example:"The user needs to swap at least 1000u"`
 	TaskStartTime   time.Time `json:"taskStartTime" example:"2024-07-01T00:00:00Z"`
 	TaskEndTime     time.Time `json:"taskEndTime" example:"2024-07-29T00:00:00Z"`
-	WalletAddress   string    `json:"walletAddress" example:"0x1234.."`
+	WalletAddress   string    `json:"walletAddress" example:"0xb36ce3F521a1FF4B0CffB82DDd71F0a51fCf56ce"`
 	Points          int       `json:"points" example:"100"`
 	TotalAmount     int64     `json:"totalAmount" example:"100"`
 	Status          string    `json:"status" example:"completed"`
@@ -44,6 +44,8 @@ func GetUserTaskStatus(app *usecase.Application) gin.HandlerFunc {
 			respondWithError(c, common.NewError(common.ErrorCodeParameterInvalid, errors.New("address is empty")))
 			return
 		}
+
+		// TODO: Need to check address signature?
 
 		tasks, err := app.UserService.GetUserTaskStatus(c, address)
 		if err != nil {
@@ -73,7 +75,7 @@ func GetUserTaskStatus(app *usecase.Application) gin.HandlerFunc {
 
 // @description	User tasks request body
 type UserTasksBody struct {
-	WalletAddress string `json:"walletAddress" binding:"required" example:"0x1234.."`
+	WalletAddress string `json:"walletAddress" binding:"required" example:"0xb36ce3F521a1FF4B0CffB82DDd71F0a51fCf56ce"`
 } //	@name	UserTasksBody
 
 // @description	User tasks response
@@ -101,7 +103,7 @@ type UserTasksResponse struct {
 //	@tags			user
 //	@accept			json
 //	@produce		json
-//	@router			/user/tasks   [post]
+//	@router			/user/points   [post]
 //	@param			body	body		router.UserTasksBody	true	"User tasks request body"
 //	@success		200		{object}	[]router.UserTasksResponse
 //	@failure		400
@@ -115,6 +117,8 @@ func GetUserPointsHistory(app *usecase.Application) gin.HandlerFunc {
 			respondWithError(c, common.NewError(common.ErrorCodeParameterInvalid, err))
 			return
 		}
+
+		// TODO: Need to check address signature?
 
 		tasks, err := app.UserService.GetUserPointsHistory(c, body.WalletAddress)
 		if err != nil {
@@ -133,6 +137,43 @@ func GetUserPointsHistory(app *usecase.Application) gin.HandlerFunc {
 			})
 		}
 		respondWithJSON(c, http.StatusOK, response)
+	}
+}
+
+// Distribute tasks for user
+//
+// Assumption: Users must accept the task first
+//
+//	@summary		Distribute tasks for user
+//	@description	Distribute tasks for user
+//	@tags			user
+//	@accept			json
+//	@produce		json
+//	@router			/user/distribute   [post]
+//	@param			body	body		router.UserTasksBody	true	"User tasks request body"
+//	@success		200		{object}	router.SuccessMessage
+//	@failure		400
+func DistributeTasks(app *usecase.Application) gin.HandlerFunc {
+
+	return func(c *gin.Context) {
+
+		var body UserTasksBody
+		if err := c.BindJSON(&body); err != nil {
+			err = errors.Join(errors.New("[UserHandler][DistributeTasks] Bind JSON"), err)
+			respondWithError(c, common.NewError(common.ErrorCodeParameterInvalid, err))
+			return
+		}
+
+		// TODO: Need to check address signature?
+
+		err := app.UserService.DistributeTasks(c, body.WalletAddress)
+		if err != nil {
+			err = errors.Join(errors.New("[UserHandler][DistributeTasks] Get user tasks failed"), err)
+			respondWithError(c, common.NewError(common.ErrorCodeInternalProcess, err))
+			return
+		}
+
+		respondWithSuccess(c)
 	}
 }
 
